traefik/test/tlsingressroute1.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.kaubalegacy.com`)
      kind: Rule
      services:
        - name: nginx-deploy-blue
          port: 80
  tls:
    certResolver: letsencrypt
